Bug 154174 - Empty edit cell after fill
Summary: Empty edit cell after fill
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium minor
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:7.6.0 target:7.5.5
Keywords:
Depends on:
Blocks: Calc-Formula-Bar
  Show dependency treegraph
 
Reported: 2023-03-13 22:17 UTC by maison
Modified: 2023-08-23 22:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description maison 2023-03-13 22:17:45 UTC
Description:
(see steps)

Steps to Reproduce:
1. Type something in a new cell.
2. Move to a different cell and press Ctrl Y to perform the same text in this other cell.
3. Now press F2 to edit the cell.

Actual Results:
There is nothing to edit!

As a workaround, you have to leave the cell and come back, then F2 will let you edit that text.

Expected Results:
The text should be available to edit from the moment it was created (from the first F2 press).
The same as if you put the text with Ctrl D or Paste.


Reproducible: Always


User Profile Reset: No

Additional Info:
(see steps)
Comment 1 m_a_riosv 2023-03-14 03:54:24 UTC
The proper shortcut for that is [Ctrl+Shift+Y]

See in Menu/Edit (with Menu/Tools/Options/View/Visibility - Shortcut, automatic or show)

You can change the shortcuts on Menu/Tools/Customize [Keyboard]
Comment 2 maison 2023-03-14 06:27:51 UTC
m.a.riosv, indeed it’s Ctrl Shift Y. Sorry for the confusion.
Regardless, the bug is about editing, so please take it into account.
Comment 3 Telesto 2023-03-14 10:01:30 UTC
Confirm
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d8ae6d1388f28c405c4de2dfe93dbfe2d8acd470
CPU threads: 8; OS: Mac OS X 12.6.3; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded

@maison
Note: self-confirming of bugs (setting status to NEW) without confirmation by someone else is against bug tracker protocol. It shouldn't be done.
Comment 4 ady 2023-03-14 10:35:06 UTC
STR
1. Type something in a new cell. [ENTER]
2. Move to another cell (or not). [CTRL]+[SHIFT]+[Y].
3. [F2] seems to hide the content of the cell. Press [ESC] and the cell still has its content.

[F2] is circumstantial. The problem is that the formula bar still doesn't have the content (look up :-).

Note that after using arrows, or [ENTER] or [TAB], or [ALT] twice, or [ALT]+[TAB] twice, or... and going back to the cell (if necessary), the formula bar finally shows the inserted content.

Already in LO 3.3. Haven't checked whether inherited too.
Comment 5 Commit Notification 2023-06-01 07:56:15 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a5c1b749a89b662f9a136d774b3dfd5fbd639c50

tdf#154174 sc: fix input line to update to the repeated content

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-06-01 12:27:46 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b6b28854c77731f7506b2551dc5dd47f798ca946

tdf#154174: sc: move UItest to CppUnittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-06-01 13:51:03 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/1a0b4190cbdc8c5c5656465422fbcfd59fcff7b5

tdf#154174 sc: fix input line to update to the repeated content

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 NISZ LibreOffice Team 2023-06-06 09:46:31 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 026924b192031769449814b9166a7b8d37c869f8
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 9 maison 2023-08-23 22:07:29 UTC
Thanks. It works in 7.6.0.