tdf#154174 sc: fix input line to update to the repeated content

Repeating the last text edit by Repeat, e.g. by pressing
Ctrl-Shift-Y, the input line still contained the old content
of the cell, and only updated to the new content after moving
the cursor to another cell and back. Now the input line is updated
automatically, and the actual content of the cell can be modified
immediately by pressing F2 or clicking in the input line.

Change-Id: Ia38b833ff77c75d37700715638aa71c7f1863e91
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152423
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit a5c1b749a89b662f9a136d774b3dfd5fbd639c50)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152437
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>